RESOLVED FIXED89446
Compilation failure in StyleResolver.cpp
https://bugs.webkit.org/show_bug.cgi?id=89446
Summary Compilation failure in StyleResolver.cpp
Mike West
Reported 2012-06-19 01:24:23 PDT
Error when compiling the Chromium port under ninja/clang: `../../Source/WebCore/css/StyleResolver.cpp:3333:13: error: enumeration value 'CSSPropertyWebkitColumnProgression' not handled in switch [-Werror,-Wswitch]`
Attachments
Patch (1.48 KB, patch)
2012-06-19 01:27 PDT, Mike West
no flags
Mike West
Comment 1 2012-06-19 01:27:41 PDT
Ryosuke Niwa
Comment 2 2012-06-19 01:36:30 PDT
Comment on attachment 148283 [details] Patch Clearing flags on attachment: 148283 Committed r120691: <http://trac.webkit.org/changeset/120691>
Ryosuke Niwa
Comment 3 2012-06-19 01:36:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.