Compilation failure in StyleResolver.cpp https://bugs.webkit.org/show_bug.cgi?id=89446

Patch by Mike West <mkwst@chromium.org> on 2012-06-19
Reviewed by Ryosuke Niwa.

Adding 'CSSPropertyWebkitColumnProgression' to a switch statement from
which it was missing.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList):


Canonical link: https://commits.webkit.org/107301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120691 268f45cc-cd09-0410-ab3c-d52691b4dbfc